# AgentOpsIQ

./: .gitignore  README.md  pyproject.toml
docs/architecture/: reference-architecture.md  rule-engine-contract.md
docs/governance/: legal-ip-operating-boundaries.md
docs/product/: customer-pain-validation.md  feature-catalog.md  product-brief.md  readiness-checks-v1.md  roadmap.md  top-five-product-priorities.md  trust-plane-direction.md
docs/research/: inspiration-map.md
docs/stages/: stage-1-agentopsiq-scanner.md
docs/status/: issue-log.md  progress-tracker.md
docs/testing/: local-lab-test-plan.md
examples/sample-agent/: README.md
src/agentopsiq/: cli.py
src/cli/: README.md
tests/: test_scanner.py
tests/fixtures/: README.md
tests/fixtures/missing-otel-exporter/: deployment.yaml
tests/fixtures/missing-resource-limits/: deployment.yaml
tests/fixtures/passing/: deployment.yaml
